Fiche vehicule particuler : z-index du bouton "Envoyer un message" fixe en bas à droite

--- a/app/Resources/private/scss/components/_vehicle.scss
+++ b/app/Resources/private/scss/components/_vehicle.scss
@@ -1077,7 +1077,7 @@
       position: fixed;
       bottom: 20px;
       right: 20px;
-
+      z-index: 1;
       height: 48px;
       width: 48px;
       border-radius: 50%;
